--- a/menu/index.html
+++ b/menu/index.html
@@ -160,11 +160,6 @@
                             <h3>Arrosticini <span class="price">5,5</span></h3>
                             <p>Arrosticini di pecora</p>
                         </li>
-                        <!-- <li>
-                            <h3>Spiedini di Maiale e Pollo <span class="price">5,9</span></h3>
-                            <p>Spiedini di maiale, pollo e peperoni</p>
-                        </li> -->
-
                     </ul>
                 </div>
             </div>
@@ -176,10 +171,6 @@
                             <h3>Mini Burger e Patatine <span class="price">6,9</span></h3>
                             <p>Manzo (100 grammi), cheddar. Servito con patatine e ben cotto</p>
                         </li>
-                        <!-- <li>
-                            <h3>Bocconcini e Patatine <span class="price">6,9</span></h3>
-                            <p>Bocconcini di pollo fatti in casa, serviti con patate fritte</p>
-                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -342,10 +333,6 @@
                             <p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
                         </li>
                         <!-- <li>
-                            <h3>Gambrinus Weisse</h3>
-                            <p>Weisse 5,2%</p>
-                        </li> -->
-                        <!-- <li>
                             <h3>Sofronia</h3>
                             <p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
                         </li> -->
@@ -401,10 +388,14 @@
                             <h3>Breaking Hops</h3>
                             <p>Doppia IPA 7,2% <br><em>Birrificio MC-77</em></p>
                         </li> -->
-                      <!--  <li>
+                        <!-- <li>
                             <h3>Marina</h3>
                             <p>IPA Ambrata 6,2% <br><em>Birrificio Mukkeller</em></p>
 			             </li> -->
+                        <li>
+                            <h3>Nonnukka</h3>
+                            <p>IPA Leggera 4,8% <br><em>Birrificio Mukkeller</em></p>
+                        </li>
                         <li>
                             <h3>Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
@@ -448,19 +439,7 @@
                              <li>
                                 <h3>Weisse 50cl <span class="price">6</span></h3>
                                 <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
-                            </li> 
-                            <!-- <li>
-                                <h3>Neuottinger Dunkel 50cl <span class="price">6</span></h3>
-                                <p>Rossa tedesca 5,3% <br><em>Birrificio Mullerbrau</em></p>
-                            </li> -->
-                            <!-- <li>
-                                <h3>Bockser 50cl <span class="price">6</span></h3>
-                                <p>Rossa tedesca 8,2% <br><em>Birrificio Mullerbrau</em></p>
-                            </li> -->
-                            <!-- <li>
-                                <h3>Effecto Placebo Lattina 33cl <span class="price">5</span></h3>
-                                <p> Session IPA 4% <br><em>Birrificio dei Castelli</em></p>
-                            </li> -->
+                            </li>
                             <li>
                                 <h3>Brevis Furor Lattina 33cl <span class="price">5</span></h3>
                                 <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
@@ -485,18 +464,10 @@
                                 <h3>Marina 50cl <span class="price">6</span></h3>
                                 <p>American pale ale 6,4% <br><em>Birrificio Mukkeller</em></p>
                             </li> -->
-                            <!-- <li>
-                                <h3>Extrema Ratio Lattina 33cl <span class="price">5</span></h3>
-                                <p>Doppia IPA 7,4% <br><em>irrificio dei Castelli</em></p>
-                            </li> -->
                             <li>
                                 <h3>Hattori Hanzo 50cl <span class="price">6</span></h3>
                                 <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
                             </li>
-                            <!-- <li>
-                                <h3>Nessuna Speranza 50cl <span class="price">6</span></h3>
-                                <p>Belgian IPA 7,5% <br><em>Birrificio Mukkeller</em></p>
-                            </li> -->
                             <li>
                                 <h3>Dopplebock 50cl <span class="price">6</span></h3>
                                 <p>Rossa tedesca 7,2% <br><em>Birrificio Hirsch</em></p>
@@ -580,7 +551,7 @@
                             <h3>Gewurztraminer DOC <span class="price">18 / 4</span></h3>
                             <p><em>Cantina H.Lun</em></p>
                         </li>
-                    <!--    <li>
+                        <!-- <li>
                             <h3>Ribolla Gialla IGT<span class="price">18 / 4</span></h3>
                             <p><em>Cantina Branko</em></p>
                         </li> -->
@@ -592,10 +563,6 @@
                             <h3>Prosecco Treser DOCG <span class="price">15 / 3,5</span></h3>
                             <p>Brut <br><em>Cantina Serre di Pederiva</em></p>
                         </li>
-                        <!-- <li>
-                            <h3>Franciacorta Brut DOCG <span class="price">22 / 5</span></h3>
-                            <p><em>Cantina La Montina</em></p>
-                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -731,10 +698,6 @@
                             <h3>Du Perou 10 anni <span class="price">8</span></h3>
                             <p>Perù 45%. <br>Profumo di frutta fresca: albicocche, pesche e pere, seguito da legno, spezie e tabacco. Al palato  è fedele a ciò che il naso ha annunciato</p>
                         </li>
-                       <!-- <li>
-                            <h3>Naga <span class="price">6</span></h3>
-                            <p>Filippine 38%. <br>Profumo di frutta esotica poi spezie e foglie secche. Al palato vaniglia, un tocco di cannella e spezie esotiche</p>
-                        </li> -->
                     </ul>
                 </div>
             </div>
