--- a/menu/index.html
+++ b/menu/index.html
@@ -332,6 +332,10 @@
                             <h3>Italicum</h3>
                             <p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
                         </li>
+                        <li>
+                            <h3>Bock</h3>
+                            <p>Rossa stile tedesco dolce 6,5% <br><em>Birrificio Forst</em></p>
+                        </li>
                         <!-- <li>
                             <h3>Sofronia</h3>
                             <p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
