--- a/menu/index.html
+++ b/menu/index.html
@@ -139,7 +139,6 @@
                         </li>
                         <li>
                             <h3>Patate Fritte <span class="price">4,5</span></h3>
-                            <p>Patate fritte con buccia</p>
                         </li>
                     </ul>
                 </div>
@@ -154,7 +153,7 @@
                         </li>
                         <li>
                             <h3>Alette di Pollo <span class="price">5,5</span></h3>
-                            <p>Leggermente piccanti o piccanti</p>
+                            <p>A scelta fra leggermente piccanti o piccanti</p>
                         </li>
                         <li>
                             <h3>Arrosticini <span class="price">5,5</span></h3>
