--- a/menu/index.html
+++ b/menu/index.html
@@ -444,6 +444,10 @@
                                 <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
                             </li>
                             <li>
+                                <h3>Effecto Placebo</h3 Lattina 33cl <span class="price">5</span></h3>
+                                <p>Session IPA 4% <br><em>Birrificio dei Castelli</em></p>
+                            </li>
+                            <li>
                                 <h3>Brevis Furor Lattina 33cl <span class="price">5</span></h3>
                                 <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
                             </li>
@@ -487,10 +491,10 @@
                                 <h3>Schwarze Madonna 50cl <span class="price">6</span></h3>
                                 <p>Nera tedesca 5,5% <br><em>Birrificio Mariahilfer</em></p>
                             </li> -->
-                            <!-- <li>
+                            <li>
                                 <h3>Calix 33cl <span class="price">6</span></h3>
                                 <p>Stout 6,7% <br><em>Birrificio dei Castelli</em></p>
-                            </li> -->
+                            </li>
                             <li>
                                 <h3>Lu Carzolà 33cl <span class="price">6</span></h3>
                                 <p>Coffee stout all'anice 8% <br><em>Birrificio MC-77</em></p>
