--- a/asporto/index.html
+++ b/asporto/index.html
@@ -146,7 +146,6 @@
                         </li>
                         <li>
                             <h3>Patate Fritte <span class="price">4,5</span></h3>
-                            <p>Patate fritte con buccia</p>
                         </li>
                     </ul>
                 </div>
@@ -161,7 +160,7 @@
                         </li>
                         <li>
                             <h3>Alette di Pollo <span class="price">5,5</span></h3>
-                            <p>Leggermente piccanti o piccanti</p>
+                            <p>A scelta fra leggermente piccanti o piccanti</p>
                         </li>
                         <li>
                             <h3>Arrosticini <span class="price">5,5</span></h3>
