--- a/menu/index.html
+++ b/menu/index.html
@@ -331,10 +331,10 @@
                             <h3>Italicum</h3>
                             <p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
                         </li>
-                      <!--  <li>
+                        <li>
                             <h3>Bock</h3>
                             <p>Rossa stile tedesco dolce 6,5% <br><em>Birrificio Forst</em></p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Sofronia</h3>
                             <p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
@@ -439,12 +439,12 @@
                                 <h3>Hellerbock 50cl <span class="price">6</span></h3>
                                 <p>Keller tedesca 6,5% <br><em>Birrificio Hirsch</em></p>
                             </li>
-                             <li>
+                            <!-- <li>
                                 <h3>Weisse 50cl <span class="price">6</span></h3>
                                 <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
-                            </li>
+                            </li> -->
                             <li>
-                                <h3>Effecto Placebo</h3 Lattina 33cl <span class="price">5</span></h3>
+                                <h3>Effecto Placebo Lattina 33cl</h3 Lattina 33cl <span class="price">5</span></h3>
                                 <p>Session IPA 4% <br><em>Birrificio dei Castelli</em></p>
                             </li>
                             <li>
