--- a/menu/index.html
+++ b/menu/index.html
@@ -202,7 +202,7 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Pulled Pork <span class="price">10,5</span></h3>
-                            <p>Maiale sfilacciato, coleslow, cetriolini, insalata riccia, salsa piccante</p>
+                            <p>Maiale sfilacciato, coleslaw, cetriolini, insalata riccia, salsa piccante</p>
                         </li>
                         <!-- <li>
                             <h3>Autunno <span class="price">10,5 / doppio 14,9</span></h3>
