--- a/menu/index.html
+++ b/menu/index.html
@@ -448,7 +448,7 @@
                                 <p>Session IPA 4% <br><em>Birrificio dei Castelli</em></p>
                             </li>
                             <li>
-                                <h3>Brevis Furor Lattina 33cl <span class="price">5</span></h3>
+                                <h3>Brevis Furor Lattina 33cl<span class="price">5</span></h3>
                                 <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
                             </li>
                             <!-- <li>
@@ -621,11 +621,11 @@
                         </li>
                         <li>
                             <h3>Coca Cola <span class="price">3</span></h3>
-                            <p>33cl</p>
+                            <p>Lattina 33cl</p>
                         </li>
                         <li>
                             <h3>Coca Cola Zero<span class="price">3</span></h3>
-                            <p>33cl</p>
+                            <p>Lattina 33cl</p>
                         </li>
                         <li>
                             <h3>Fanta<span class="price">3</span></h3>
