--- a/menu/index.html
+++ b/menu/index.html
@@ -592,10 +592,10 @@
                             <h3>Spritz <span class="price">5</span></h3>
                             <p>Aperol, Campari</p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Gin Tonic Ginepraio<span class="price">9</span></h3>
                             <p>Biologico. Servito con acqua tonica J. Gasco</p>
-                        </li>
+                        </li> -->
                        <!-- <li>
                             <h3>Gin Tonic Ginpilz<span class="price">8</span></h3>
                             <p>Aromatico. Servito con acqua tonica J. Gasco</p>
@@ -603,6 +603,10 @@
                         <li>
                             <h3>Gin Tonic Silverback<span class="price">8</span></h3>
                             <p>London Gin. Servito con acqua tonica J. Gasco</p>
+                        </li>
+                        <li>
+                            <h3>Gin Tonic Puro<span class="price">8</span></h3>
+                            <p>Morbido. Servito con acqua tonica J. Gasco</p>
                         </li>
                     </ul>
                 </div>
