--- a/menu/index.html
+++ b/menu/index.html
@@ -633,7 +633,7 @@
                         </li>
                         <li>
                             <h3>Fanta <span class="price">3</span></h3>
-                            <p>33cl</p>
+                            <p>Lattina 33cl</p>
                         </li>
                         <!-- <li>
                             <h3>Succo di Mela <span class="price">3</span></h3>
