--- a/menu/index.html
+++ b/menu/index.html
@@ -444,7 +444,7 @@
                                 <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
                             </li>
                             <li>
-                                <h3>Effecto Placebo Lattina 33cl </h3 Lattina 33cl <span class="price">5</span></h3>
+                                <h3>Effecto Placebo Lattina 33cl <span class="price">5</span></h3>
                                 <p>Session IPA 4% <br><em>Birrificio dei Castelli</em></p>
                             </li>
                           <!--  <li>
