--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
 				<!-- <p>Il ristorante nel periodo estivo è aperto solo all'esterno, <strong>non è necessario avere il green pass</strong>.</p> -->
 				<p>Per mangiare all'interno è <strong>obbligatorio il green pass</strong>.</p>
+				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
 				<!-- <a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a> -->
 			</div>
 		</div>
@@ -133,7 +134,7 @@
 			</div> -->
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
-				<p><strong>Aperto dal Mercoledì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
+				<p><strong>Aperto dal Giovedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
 				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
@@ -150,7 +151,7 @@
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
-				<p><strong>Dal Mercoledì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
+				<p><strong>Dal Giovedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
                 <span class="hide-for-small extra-space"><a role="button" href="https://webview.passbot.it?venue=Ca'_Vecchia_Beerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="https://webview.passbot.it?venue=Ca'_Vecchia_Beerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
@@ -264,7 +265,7 @@
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                        	<div class="row">
                        		<div class="large-12 medium-12 small-12 columns">
-                                <p><strong>Aperto dal Mercoledì alla Domenica.</strong><br>Dalle 19:00 alle 23:00</p>
+                                <p><strong>Aperto dal Giovedì alla Domenica.</strong><br>Dalle 19:00 alle 23:00</p>
                             </div>
                        	</div>
                  	</li>
