--- a/menu/index.html
+++ b/menu/index.html
@@ -296,7 +296,7 @@
                             </li>
                             <li>
                                 <h3>Blondie <span class="price">5</span></h3>
-                                <p>Brownie con nocciole. Servito con mousse di crema chantilly</p>
+                                <p>Brownie con nocciole. Servito con crema al mascarpone e rhum</p>
                             </li>
                             <li>
                                 <h3>Birramisù <span class="price">5</span></h3>
