--- a/contatti/index.html
+++ b/contatti/index.html
@@ -115,13 +115,13 @@
             </div>
         </div>
     </div>
-    <div class="panel-home-n">
+ <!--   <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
                 <h2>Press Kit</h2>
             </div>
         </div>
-        <div class="row">
+             <div class="row">
             <div class="medium-6 large-6 columns">
                 <p>Giornalista, blogger o vuoi semplicemente scrivere di noi sui social o a un amico?</p>
                 <p>Compila il form e ricevi tutte le informazioni e i media necessari per cominciare a scrivere di Ca' Vecchia Beerstrot.</p>
@@ -220,7 +220,7 @@
                 <p>Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimi hamburger agli Italiani e a tutti coloro che verranno a visitarci.</p>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
