--- a/asporto/index.html
+++ b/asporto/index.html
@@ -122,27 +122,28 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Bocconcini di Pollo <span class="price">5,9</span></h3>
-                            <p>Serviti con salsa piccante</p>
+                            <p>Serviti con salsa piccante <br>
+                            <small>Contiene: Glutine, Uova, Latte</small></p>
                         </li>
                         <li>
                             <h3>Olive all'Ascolana <span class="price">5,5</span></h3>
-                            <p>Il più tipico street food marchigiano</p>
+                            <p>Il più tipico street food marchigiano <br>
+                            <small>Contiene: Glutine, Uova, Latte, Sedano</small></p>
                         </li>
                         <li>
                             <h3>Mozzarelle Fritte <span class="price">5,9</span></h3>
-                            <p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa</p>
+                            <p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa <br>
+                            <small>Contiene: Glutine, Uova, Latte</small></p>
                         </li>
-                        <!-- <li>
-                            <h3>Verdure Miste in Tempura <span class="price">4,9</span></h3>
-                            <p>Cipolle rosse, peperoni, melanzane e zucchine</p>
-                        </li> -->
                         <li>
                             <h3>Cipolle Rosse <span class="price">4,9</span></h3>
-                            <p>Cipolla rossa in tempura</p>
+                            <p>Cipolla rossa in tempura <br>
+                            <small>Contiene: Glutine, Latte, Crostacei</small></p>
                         </li>
                         <li>
                             <h3>Falafel <span class="price">5,5</span></h3>
-                            <p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa</p>
+                            <p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa <br>
+                            <small>Contiene: Glutine, Sedano, Senape</small></p>
                         </li>
                         <li>
                             <h3>Patate Fritte <span class="price">4,5</span></h3>
@@ -156,11 +157,13 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Peperoncini Piccanti <span class="price">5,5</span></h3>
-                            <p>Peperoncini ripieni di robiola avvolti nella pancetta</p>
+                            <p>Peperoncini ripieni di robiola avvolti nella pancetta <br>
+                            <small>Contiene: Anidride Solforosa e Solfiti, Latte</small></p>
                         </li>
                         <li>
                             <h3>Alette di Pollo <span class="price">5,5</span></h3>
-                            <p>A scelta fra leggermente piccanti o piccanti</p>
+                            <p>A scelta fra leggermente piccanti o piccanti <br>
+                            <small>Contiene: Glutine, Uova, Latte</small></p>
                         </li>
                         <li>
                             <h3>Arrosticini <span class="price">5,5</span></h3>
@@ -175,12 +178,9 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Mini Burger e Patatine <span class="price">6,9</span></h3>
-                            <p>Manzo (100 grammi), cheddar. Servito con patatine e ben cotto</p>
+                            <p>Manzo (100 grammi), cheddar. Servito con patatine e ben cotto <br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
-                        <!-- <li>
-                            <h3>Bocconcini e Patatine <span class="price">6,9</span></h3>
-                            <p>Bocconcini di pollo fatti in casa, serviti con patate fritte</p>
-                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -190,19 +190,23 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Beerstrot <span class="price">10,9 / doppio 14,9</span></h3>
-                            <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
+                            <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
                             <h3>New York <span class="price">9,5 / doppio 14,9</span></h3>
-                            <p>Manzo, cheddar, cipolla caramellata, insalata</p>
+                            <p>Manzo, cheddar, cipolla caramellata, insalata<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
                             <h3>Diablo <span class="price">10,5 / doppio 14,9</span></h3>
-                            <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
+                            <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
                             <h3>Pollo <span class="price">9,5 / doppio 14,9</span></h3>
-                            <p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
+                            <p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                     </ul>
                 </div>
@@ -213,11 +217,13 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Pulled Pork <span class="price">10,5</span></h3>
-                            <p>Maiale sfilacciato, coleslow, cetriolini, insalata riccia, salsa piccante</p>
+                            <p>Maiale sfilacciato, coleslaw, cetriolini, insalata riccia, salsa piccante<br>
+                            <small>Contiene: Anidride Solforosa e Solfiti, Glutine, Latte, Senape, Uova</small></p>
                         </li>
                         <li>
                             <h3>Autunno <span class="price">10,5 / doppio 14,9</span></h3>
-                            <p>Manzo, scamorza affumicata, crema di funghi, speck croccante</p>
+                            <p>Manzo, scamorza affumicata, crema di funghi, speck croccante<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <!-- <li>
                             <h3>Inverno <span class="price">10,5 / doppio 14,9</span></h3>
@@ -229,7 +235,8 @@
                         </li> -->
                         <li>
                             <h3>Deciso <span class="price">10,5 / doppio 14,9</span></h3>
-                            <p>Manzo, gorgonzola, guanciale, pomodorini confit</p>
+                            <p>Manzo, gorgonzola, guanciale, pomodorini confit<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <!-- <li>
                             <h3>Cacio e Pepe <span class="price">10,5 / doppio 14,9</span></h3>
@@ -237,17 +244,19 @@
                         </li> -->
                         <li>
                             <h3>Mantovano <span class="price">10,5 / doppio 14,9</span></h3>
-                            <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante</p>
-                        </li>
-                     <!--   <li>
-                            <h3>Estivo <span class="price">10,5 / doppio 14,9</span></h3>
-                            <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
-                        </li> -->
-                        <li>
-                            <h3>Carbonara <span class="price">10,9 / doppio 14,9</span></h3>
-                            <p>Manzo, guanciale, crema di uovo, pecorino romano e pepe</p>
+                            <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante<br>
+                            <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                         </li>
                     <!--    <li>
+                            <h3>Estivo <span class="price">10,5 / doppio 14,9</span></h3>
+                            <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
+                        </li>  -->
+                        <li>
+                            <h3>Carbonara <span class="price">10,9 / doppio 14,9</span></h3>
+                            <p>Manzo, guanciale, crema di uovo, pecorino romano e pepe<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
+                        </li>
+                <!--        <li>
                             <h3>Greco <span class="price">9,5 / doppio 14,9</span></h3>
                             <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki</p>
                         </li> -->
@@ -260,11 +269,13 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                           <li>
                             <h3>Vegetariano Fagioli <span class="price">9,5</span></h3>
-                            <p>Hamburger di borlotti, julienne di cipolla fritta, crema di cicoria</p>
+                            <p>Hamburger di borlotti, julienne di cipolla fritta, crema di cicoria<br>
+                            <small>Contiene: Glutine, Latte, Soia, Uova</small></p>
                         </li>
                         <li>
                             <h3>Vegetariano Quinoa <span class="price">9,5</span></h3>
-                            <p>Hamburger di quinoa e bulgur, rucola, cipolla caramellata; composta di rape rosse, senape e miele</p>
+                            <p>Hamburger di quinoa e bulgur, rucola, cipolla caramellata; composta di rape rosse, senape e miele<br>
+                            <small>Contiene: Glutine, Latte, Senape, Uova</small></p>
                         </li>
                     </ul>
                 </div>
@@ -275,7 +286,8 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Costine <span class="price">13,9</span></h3>
-                            <p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte</p>
+                            <p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte<br>
+                            <small>Contiene: Anidride Solforosa e Solfiti, Glutine, Pesce, Semi di Sesamo</small></p>
                         </li>
                         <li>
                             <h3>Tagliata di Picanha <span class="price">19</span></h3>
@@ -293,25 +305,29 @@
                     <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
-                        <!--    <li>
+                       <!--     <li>
                                 <h3>Crumble <span class="price">5</span></h3>
                                 <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente</p>
                             </li> -->
                             <li>
                                 <h3>Cioccolatosa <span class="price">5</span></h3>
-                                <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato</p>
+                                <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li>
                             <li>
                                 <h3>Cheesecake <span class="price">5</span></h3>
-                                <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
+                                <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula<br>
+                            <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
                             <li>
                                 <h3>Blondie <span class="price">5</span></h3>
-                                <p>Brownie con nocciole. Servito con crema al mascarpone e rhum</p>
+                                <p>Brownie con nocciole. Servito con crema al mascarpone e rhum <br>
+                            <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
                             <li>
                                 <h3>Birramisù <span class="price">5</span></h3>
-                                <p>Tiramisù con mascarpone artigianale alla birra stout</p>
+                                <p>Tiramisù con mascarpone artigianale alla birra stout<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li>
                             <!-- <li>
                                 <h3>Cantucci e Visciola <span class="price">5,5</span></h3>
