--- a/menu/index.html
+++ b/menu/index.html
@@ -529,6 +529,10 @@
                             </li> -->
                         </ul>
                     </div>
+                    <div class="title-divider">
+                        <p class="">Le birre, se non diversamente indicato, contengono glutine.</p>
+                        <br>
+                    </div>
                 </div>
             </div>
         </section>
@@ -595,6 +599,10 @@
                             <p>Brut <br><em>Cantina Serre di Pederiva</em></p>
                         </li>
                     </ul>
+                    <div class="title-divider">
+                        <p class="">I vini contengono naturalmente Solfiti</p>
+                        <br>
+                    </div>
                 </div>
             </div>
             <div class="row">
