--- a/menu/index.html
+++ b/menu/index.html
@@ -600,9 +600,9 @@
                         </li>
                     </ul>
                     <div class="title-divider">
-                        <p class="">I vini contengono naturalmente Solfiti</p>
+                        <p class="">I vini contengono Anidride Solforosa e Solfiti</p>
                         <br>
-                    </div>
+                    </div
                 </div>
             </div>
             <div class="row">
