--- a/menu/index.html
+++ b/menu/index.html
@@ -599,10 +599,6 @@
                             <p>Brut <br><em>Cantina Serre di Pederiva</em></p>
                         </li>
                     </ul>
-                    <div class="title-divider">
-                        <p class="">I vini contengono Anidride Solforosa e Solfiti</p>
-                        <br>
-                    </div
                 </div>
             </div>
             <div class="row">
@@ -614,6 +610,10 @@
                             <p>Antinori</p>
                         </li>
                     </ul>
+                    <div class="title-divider">
+                        <p class="">I vini contengono Anidride Solforosa e Solfiti</p>
+                        <br>
+                    </div>
                 </div>
             </div>
             <div class="row">
