--- a/menu/index.html
+++ b/menu/index.html
@@ -530,7 +530,7 @@
                         </ul>
                     </div>
                     <div class="title-divider">
-                        <p class="">Le birre, se non diversamente indicato, contengono glutine.</p>
+                        <p class="">Le birre, se non diversamente indicato, contengono glutine</p>
                         <br>
                     </div>
                 </div>
