--- a/menu/index.html
+++ b/menu/index.html
@@ -464,8 +464,20 @@
                                 <p>Keller tedesca 6,5% <br><em>Birrificio Hirsch</em></p>
                             </li> -->
                             <li>
+                                <h3>Landbier 1857 50cl <span class="price">6</span></h3>
+                                <p>Helles tedesca non filtrata 5,3% <br><em>Birrificio Bayreuther</em></p>
+                            </li>
+                            <li>
                                 <h3>Weisse 50cl <span class="price">6</span></h3>
                                 <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
+                            </li>
+                            <li>
+                                <h3>Kardinal 50cl <span class="price">6</span></h3>
+                                <p>Birra monacense 7,5%<br><em>Birrificio Norbertus</em></p>
+                            </li>
+                            <li>
+                                <h3>Poculator 50cl <span class="price">6</span></h3>
+                                <p>Rossa tedesca 7,6% <br><em>Birrificio Scheyern</em></p>
                             </li>
                         <!--    <li>
                                 <h3>Effecto Placebo Lattina 33cl <span class="price">5</span></h3>
