--- a/asporto/index.html
+++ b/asporto/index.html
@@ -309,11 +309,11 @@
                                 <h3>Crumble <span class="price">5</span></h3>
                                 <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente</p>
                             </li> -->
-                            <li>
+                        <!--    <li>
                                 <h3>Cioccolatosa <span class="price">5</span></h3>
                                 <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3>Cheesecake <span class="price">5</span></h3>
                                 <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula<br>
@@ -328,6 +328,11 @@
                                 <h3>Birramisù <span class="price">5</span></h3>
                                 <p>Tiramisù con mascarpone artigianale alla birra stout<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
+                            </li>
+			<li>
+                                <h3>Whoop<span class="price">5</span></h3>
+                                <p>Morbido biscotto al cioccolato ripieno di burro di arachidi<br>
+                            <small>Contiene: Arachidi, Glutine, Latte, Uova</small></p>
                             </li>
                             <!-- <li>
                                 <h3>Cantucci e Visciola <span class="price">5,5</span></h3>
