--- a/menu/index.html
+++ b/menu/index.html
@@ -731,7 +731,7 @@
                             <h3>Anisetta Meletti <span class="price">3</span></h3>
                         </li>
                         <li>
-                            <h3>Fernet Branca, Brancamente, Montenegro <span class="price">3</span></h3>
+                            <h3>Fernet Branca, Brancamente, Montenegro, Amaro del Capo <span class="price">3</span></h3>
                         </li>
                         <li>
                             <h3>Grappa Bianca 903 <span class="price">3,5</span></h3>
