--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 		</div>
 	</div>
 	<div class="panel-home-n">
-		<!-- <div class="row">
+		 <div class="row">
 			<div class="medium-12 large-12 columns panel clearfix">
 				<h1>Chiusura festività</h1>
-				<p>Chiusi fino al 2 Gennaio compreso.<br> Aperti Venerdì 3, Sabato 4, Domenica 5 e Lunedì 6 Gennaio.</p>
+				<p>Chiusi fino al 4 Gennaio compreso.<br> Aperti da mercoledì 5 Gennaio.</p>
 			</div>
-		</div> -->
+		</div> 
 		<div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Orari</h1>
