--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Beerstrot | Specialisti in Hamburger Goduriosi</title>
 	<meta name="description" content="Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona"/>
 	<meta name="author" content="Ca' Vecchia Beerstrot"/>
-	<meta name="copyright" content="Beerstrot Copyright (c) 2019"/>
+	<meta name="copyright" content="Beerstrot Copyright (c) 2022"/>
 	<meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:site" content="@beerstrot"/>
@@ -113,7 +113,7 @@
 	</div>
 	<div class="panel-home-n">
 		 <div class="row">
-			<div class="medium-12 large-12 columns panel clearfix">
+			<div class="medium-12 large-12 columns panel">
 				<h1>Chiusura festività</h1>
 				<p>Chiusi fino al 4 Gennaio compreso.<br> Aperti da mercoledì 5 Gennaio.</p>
 			</div>
