--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 	</div>
 	<div class="panel-home-n">
 		 <div class="row">
-			<div class="medium-12 large-12 columns panel">
+			<div class="medium-12 large-12 columns">
 				<h1>Chiusura festività</h1>
-				<p>Chiusi fino al 4 Gennaio compreso.<br> Aperti da mercoledì 5 Gennaio.</p>
+				<p>Siamo chiusi fino al 4 Gennaio compreso.<br> Riapriamo mercoledì 5 Gennaio.</p>
 			</div>
 		</div> 
-		<div class="row">
+		<!-- <div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Orari</h1>
 			</div>
